--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
     "cryptocurrency-icons": "^0.18.1",
+    "font-awesome": "^4.7.0",
     "react": "^18.2.0",
     "react-cryptocoins": "^1.0.11",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-pro-sidebar": "^1.1.0-alpha.1",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-web3-icons": "^1.7.0",
